consolidated canvas styles
consolidated canvas styles.

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,8 @@
       <style>
         canvas {
           background-color: black;
+          border: 3px solid red;
         }
-      </style>
-    </head>
-      <style>
-        canvas { border: 1px solid black; }
       </style>
     </head>
     <body>
