Drawn orbits and styles

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <body>
       <h1 id='title'>Welcome to the Orrery</h1>
       <hr />
-      <canvas id="orrery" width="750" height="750"></canvas>
+      <canvas id="orrery"></canvas>
       <hr />
       <article id="info">
         <h2>Info:</h2>
